# isbn-visualization

./: .dockerignore  .gitignore  Dockerfile  README.md  eslint.config.mjs  flake.nix  index.html  package.json  pnpm-lock.yaml  todo.md  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
scripts/: gen-book-titles-sqlite.ts  gen-prefixes.ts  merge-stats.ts  minify-images.sh  minify-prefix-data.sh  process-all.sh  write-titles.ts
scripts/rarity/: Cargo.toml
scripts/rarity/src/: main.rs
scripts/write-images/: ImageTiler.ts  index.ts
scripts/write-images/modules/: aggregate-dense.ts  index.ts  publication_date.ts  publishers.ts  rarity.ts  single-sparse.ts
src/: App.tsx  config.ts  index.css  index.tsx  types.d.ts
src/components/: Controls.tsx  EanBarcode.tsx  Highlight.tsx  ImageTree.tsx  IsbnGrid.tsx  IsbnMap.tsx  IsbnView.tsx  Legend.tsx  MiniMap.tsx  SingleBookCover.tsx  StatsShow.tsx  TextTree.tsx
src/lib/: DetailLevelObservable.ts  ImageLoader.ts  RuntimeConfiguration.ts  Store.ts  TitleFetcher.ts  delayRender.ts  flight.ts  google-books.ts  info-map.ts  json-fetch.ts  prefix-data.ts  shader-error.ts  shaders.ts  stats.ts  types-select.d.ts  types.d.ts  util.ts  view-utils.ts
src/projections/: bookshelf.ts  linear.ts
